--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./materialize/css/materialize.css">
+
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="#">
     <title>Welcome to Firebase Hosting</title>
@@ -20,12 +22,12 @@
 
   </head>
   <body>
-      <h2 class="card-panel teal lighten-2">hola</h2>
+      <h2 class="card-panel teal lighten-2">hola </h2>
 
 
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>            
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="./assest/materialize/js/materialize.js"></script>
+    <script src="./materialize/js/materialize.js"></script>
     <script src="./src/js/index.js"></script>
   <script src="../src/js/chat.js"></script>
   <script src="../src/js/chatMain.js"></script>
