--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="./materialize/css/materialize.css">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -22,15 +24,32 @@
 
   </head>
   <body>
-      <h2 class="card-panel teal lighten-2">hola </h2>
+    <section>
+      <div class="col s12">
+        <h4 class="center">Regulariza tu Situación</h4>
+        <p class="center">¿Como ingresaste al país?</p>
+        <p class="center">(Según tu respuesta te daremos la mejor orientación posible)</p>
+      </div>
+      <div class="col s12 center">
+          <a class="waves-effect waves-light btn-large" onclick="regular()">Regular</a>
+          <a class="waves-effect waves-light btn-large" onclick="irregular()">Irregular</a>
+      </div>
+      <div id="textoRegIrr">
 
+      </div>
+      <div class="col s12 center">
+          <a class="waves-effect waves-light btn-small">Descarga tu Documento</a>
+
+      </div>
+    </section>
 
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>            
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="./materialize/js/materialize.js"></script>
     <script src="./src/js/index.js"></script>
-  <script src="../src/js/chat.js"></script>
-  <script src="../src/js/chatMain.js"></script>
+  <script src="./src/js/chat.js"></script>
+  <script src="./src/js/chatMain.js"></script>
+  <script src="./js/regularizacionDescarga.js"></script>
   </body>
 </html>
 
