--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assest/materialize/css/materialize.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assest/font-awesome/css/">
+    <title>SJM</title>
 </head>
 <body>
 
+
         
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script src="./assest/materialize/js/materialize.js"></script>
     <script src="./src/js/index.js"></script>
 </body>
