--- a/public/index.html
+++ b/public/index.html
@@ -32,18 +32,23 @@
       </div>
       <div class="col s12 center">
           <a class="waves-effect waves-light btn-large" onclick="regular()">Regular</a>
+          <div class="col s12 center">
+              <a class="waves-effect waves-light btn-small" href="https://drive.google.com/file/d/1noLP4v8Lp0PhjmoS0Ht0r3O9QJDaGlFz/view?usp=sharing" download="siguientes_pasos">Descargar</a>
+
+          </div>
           <a class="waves-effect waves-light btn-large" onclick="irregular()">Irregular</a>
+          <div class="col s12 center">
+              <a class="waves-effect waves-light btn-small" href="https://drive.google.com/file/d/13zk4r8QwgnVLVDNjI6znw3XoilY6ZAmy/view?usp=sharing" download="regularizar">Descargar</a>
+
+          </div>
       </div>
       <div id="textoRegIrr">
 
       </div>
-      <div class="col s12 center">
-          <a class="waves-effect waves-light btn-small">Descarga tu Documento</a>
 
-      </div>
     </section>
 
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>            
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="./materialize/js/materialize.js"></script>
     <script src="./src/js/index.js"></script>
@@ -52,4 +57,3 @@
   <script src="./js/regularizacionDescarga.js"></script>
   </body>
 </html>
-
