cambios para deploy

--- a/barbara/page.html
+++ b/barbara/page.html
@@ -65,7 +65,7 @@
       <a class="btn-floating btn-large red">
           <i class="large material-icons">mode_comment</i>
       </a>
-  </a>div
+  </div>
         
   <!--JQuery-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
