--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./materialize/css/materialize.css">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/valeuno.css">
     <link rel="shortcut icon" href="#">
     <title>Welcome to Firebase Hosting</title>
 
@@ -137,6 +137,42 @@
           <i class="large material-icons">mode_comment</i>
       </a>
     </div>
+
+  <!--botones-->
+  <section class="container">
+        <div class="row">
+            <div class="col s6 m4">
+                <div id="box1">
+                    <p>Regularización migratoria</p>
+                </div>
+            </div>
+            <div class="col s6 m4">
+                <div id="box2">
+                    <p>Trabajo</p>
+                </div>
+            </div>
+            <div class="col s6 m4">
+                <div id="box3">
+                    <p>Salud</p>
+                </div>
+            </div>
+            <div class="col s6 m4">
+                <div id="box4">
+                    <p>Educación</p>
+                </div>
+            </div>
+            <div class="col s6 m4">
+                <div id="box5">
+                    <p>Vivienda</p>
+                </div>
+            </div>
+            <div class="col s6 m4">
+                <div id="box6">
+                    <p>Curso de español</p>
+                </div>
+            </div>
+        </div>
+    </section>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>            
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="./materialize/js/materialize.js"></script>
@@ -145,5 +181,7 @@
   <script src="./src/js/chatMain.js"></script>
   <script src="./js/regularizacionDescarga.js"></script>
   <script src="./js/page.js"></script>
+  <script src="./valeuno.js"></script>
+
   </body>
 </html>
