--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="./materialize/css/materialize.css">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="#">
-    <title>Welcome to Firebase Hosting</title>
+  <link rel="stylesheet" href="./materialize/css/materialize.css">
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.5.5/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.5.5/firebase-database.js"></script>
-    <script defer src="/__/firebase/5.5.5/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="#">
+  <title>Welcome to Firebase Hosting</title>
+
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/5.5.5/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-database.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.css" />
 
 
-  </head>
-  <body>
-    <section>
-      <div class="col s12">
-        <h4 class="center">Regulariza tu Situación</h4>
-        <p class="center">¿Como ingresaste al país?</p>
-        <p class="center">(Según tu respuesta te daremos la mejor orientación posible)</p>
-      </div>
-      <div class="col s12 center">
-          <a class="waves-effect waves-light btn-large" onclick="regular()">Regular</a>
-          <a class="waves-effect waves-light btn-large" onclick="irregular()">Irregular</a>
-      </div>
-      <div id="textoRegIrr">
+</head>
 
-      </div>
-      <div class="col s12 center">
-          <a class="waves-effect waves-light btn-small">Descarga tu Documento</a>
+<body>
+  <section>
+    <div class="col s12">
+      <h4 class="center">Regulariza tu Situación</h4>
+      <p class="center">¿Como ingresaste al país?</p>
+      <p class="center">(Según tu respuesta te daremos la mejor orientación posible)</p>
+    </div>
+    <div class="col s12 center">
+      <a class="waves-effect waves-light btn-large" onclick="regular()">Regular</a>
+      <a class="waves-effect waves-light btn-large" onclick="irregular()">Irregular</a>
+    </div>
+    <div id="textoRegIrr">
 
-      </div>
-    </section>
+    </div>
+    <div class="col s12 center">
+      <a class="waves-effect waves-light btn-small">Descarga tu Documento</a>
+
+    </div>
+  </section>
   <!-- Login -->
   <div class="container-fluid" id="login">
 
@@ -86,12 +90,13 @@
       </div>
     </div>
   </div>
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>            
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="./materialize/js/materialize.js"></script>
-    <script src="./src/js/index.js"></script>
-  <script src="./src/js/chat.js"></script>
-  <script src="./src/js/chatMain.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+  <script src="./materialize/js/materialize.js"></script>
+  <script src="./js/chat.js"></script>
+  <script src="./js/chatMain.js"></script>
   <script src="./js/regularizacionDescarga.js"></script>
-  </body>
+</body>
+
 </html>
