--- a/public/index.html
+++ b/public/index.html
@@ -30,22 +30,7 @@
   <body>
       <!-- regularización -->
 
-    <!-- <section>
-      <div class="col s12">
-        <h4 class="center">Regulariza tu Situación</h4>
-        <p class="center">¿Como ingresaste al país?</p>
-        <p class="center">(Según tu respuesta te daremos la mejor orientación posible)</p>
-      </div>
-      <div class="col s12 center">
-          <a class="waves-effect waves-light btn-large" onclick="regular()">Regular</a>
-          <a class="waves-effect waves-light btn-large" onclick="irregular()">Irregular</a>
-      </div>
-      <div id="textoRegIrr">
-
-</head>
-
-<body>
-  <section>
+  <section id="regulariz">
     <div class="col s12">
       <h4 class="center">Regulariza tu Situación</h4>
       <p class="center">¿Como ingresaste al país?</p>
@@ -64,7 +49,7 @@
     </div>
   </section>
   <!-- Login -->
-  <!-- <div class="container-fluid" id="login">
+   <div class="container-fluid" id="login">
 
     <div class="row">
       <div class="col-sm-4"></div>
@@ -76,11 +61,11 @@
       </div>
       <div class="col-sm-4"></div>
     </div>
-  </div>  -->
+  </div>  
 
 
   <!-- Pintura del chat -->
-  <!-- <div class="container-fluid" id="welcomeUser">
+  <div class="container-fluid" id="welcomeUser">
     <div id="userLogin"></div>
     <p id="out" style="text-align: left">
       <u>Sign Out</u>
@@ -106,7 +91,7 @@
         <i class="fas fa-map-marker-alt" id="mapIcon"></i>
       </div>
     </div> 
-  </div>-->
+  </div>
 
   <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
