--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
     <li><a href="#!">Cursos de español</a></li>  
   </ul>
   <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper" >
       <a href="#!" class="left brand-logo">Logo</a>
       <ul class="right">
     
@@ -118,7 +118,7 @@
   </nav>
 
   <!--Carousel-->
-  <div class="carousel carousel-slider center">
+  <div class="carousel carousel-slider center" id="carrousel">
     <div class="carousel-fixed-item center">
       <a class="btn waves-effect white grey-text darken-text-2">Regulariza tu situación</a>
     </div>
@@ -136,14 +136,14 @@
     </div>
   </div>
 
-  <div class="fixed-action-btn">
+  <div class="fixed-action-btn" id="chat">
       <a class="btn-floating btn-large red">
           <i class="large material-icons">mode_comment</i>
       </a>
     </div>
 
   <!--botones-->
-  <section class="container">
+  <section class="container" id="botones">
         <div class="row">
             <div class="col s6 m4">
                 <div id="box1">
@@ -180,9 +180,8 @@
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>            
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="./materialize/js/materialize.js"></script>
-    <script src="./src/js/index.js"></script>
-  <script src="./src/js/chat.js"></script>
-  <script src="./src/js/chatMain.js"></script>
+  <script src="./js/chat.js"></script>
+  <script src="./js/chatMain.js"></script>
   <script src="./js/regularizacionDescarga.js"></script>
   <script src="./js/page.js"></script>
   <script src="./valeuno.js"></script>
