--- a/public/index.html
+++ b/public/index.html
@@ -143,21 +143,20 @@
           <img src="image/img-1.jpg" class="imgSlider" > <!-- random image -->
           <div class="caption left-align">
             <h3>Bienvenido a Chile</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+            <a class="btn waves-effect white grey-text darken-text-2">Regulariza tu situación</a>
+
           </div>
         </li>
         <li>
           <img src="image/img-2.jpg" class="imgSlider"> <!-- random image -->
           <div class="caption left-align">
-            <h3>Comienza una nueva vidan</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+            <h3>Comienza una nueva vida</h3>
           </div>
         </li>
         <li>
           <img src="image/img-3.jpg"> <!-- random image -->
           <div class="caption left-align">
             <h3>Hacer un mejor futuro depende de ti</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
           </div>
         </li>
       </ul>
@@ -171,36 +170,36 @@
     
 
   <!--botones-->
-  <section class="container" id="botones">
+  <section class="container botonesReg" id="botones">
         <div class="row">
             <div class="col s6 m4">
                 <div id="box1">
-                    <p>Regularización migratoria</p>
+                    <a class="btn colorBotones">Regularización migratoria</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box2">
-                    <p>Trabajo</p>
+                    <a class="btn colorBotones">Trabajo</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box3">
-                    <p>Salud</p>
+                    <a class="btn colorBotones">Salud</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box4">
-                    <p>Educación</p>
+                    <a class="btn colorBotones">Educación</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box5">
-                    <p>Vivienda</p>
+                    <a class="btn colorBotones">Vivienda</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box6">
-                    <p>Curso de español</p>
+                    <a class="btn colorBotones">Curso de español</a>
                 </div>
             </div>
         </div>
@@ -234,6 +233,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   <script src="./materialize/js/materialize.js"></script>
   <script src="./js/index.js"></script>
+
   <script src="./js/chat.js"></script>
   <script src="./js/chatMain.js"></script>
   <script src="./js/regularizacionDescarga.js"></script>
