--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/materialize/css/materialize.css">
   <link rel="stylesheet" href="./css/valeuno.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -175,7 +176,7 @@
         <div class="row">
             <div class="col s6 m4">
                 <div id="box1">
-                    <a class="btn colorBotones">Regularización migratoria</a>
+                    <a class="btn colorBotones"><i class="fas fa-passport"></i>Regularización migratoria</a>
                 </div>
             </div>
             <div class="col s6 m4">
