--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="./materialize/css/materialize.css">
-    <link rel="stylesheet" href="./css/valeuno.css">
-    <link rel="shortcut icon" href="#">
-    <title>Welcome to Firebase Hosting</title>
+  <link rel="stylesheet" href="./css/valeuno.css">
+  <link rel="shortcut icon" href="#">
+  <title>Welcome to Firebase Hosting</title>
 
   <link rel="stylesheet" href="./css/style.css">
   <link rel="shortcut icon" href="#">
@@ -48,6 +49,7 @@
 
     </div>
   </section>
+
   <!-- Login -->
    <div class="container-fluid" id="login">
 
@@ -95,17 +97,17 @@
 
   <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">Regularizaciín migratoria</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Trabajo</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Salud</a></li>
-    <li><a href="#!">Educación</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Vivienda</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Cursos de español</a></li>  
-  </ul>
+  <li><a href="#!">Regularizaciín migratoria</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">Trabajo</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">Salud</a></li>
+  <li><a href="#!">Educación</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">Vivienda</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">Cursos de español</a></li>  
+</ul>
   <nav>
     <div class="nav-wrapper" >
       <a href="#!" class="left brand-logo">Logo</a>
@@ -137,10 +139,10 @@
   </div>
 
   <div class="fixed-action-btn" id="chat">
-      <a class="btn-floating btn-large red">
-          <i class="large material-icons">mode_comment</i>
-      </a>
-    </div>
+    <a class="btn-floating btn-large red">
+      <i class="large material-icons">mode_comment</i>
+    </a>
+  </div>
 
   <!--botones-->
   <section class="container" id="botones">
@@ -179,7 +181,7 @@
     </section>
 
     <!--Chat-->
-    <section id="chat" class="container-fluid">
+    <section id="chat_window" class="container-fluid">
         <div class="row">
             <div class="col s12">
                 <div class="bckr_hdr">
@@ -209,7 +211,7 @@
   <script src="./js/chatMain.js"></script>
   <script src="./js/regularizacionDescarga.js"></script>
   <script src="./js/page.js"></script>
-  <script src="./valeuno.js"></script>
+  <script src="./js/valeuno.js"></script>
 
   </body>
 </html>
