--- a/public/index.html
+++ b/public/index.html
@@ -181,27 +181,27 @@
             </div>
             <div class="col s6 m4">
                 <div id="box2">
-                    <a class="btn colorBotones">Trabajo</a>
+                    <a class="btn colorBotones"><i class="fas fa-briefcase-medical"></i>Trabajo</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box3">
-                    <a class="btn colorBotones">Salud</a>
+                    <a class="btn colorBotones"><i class="fas fa-briefcase-medical"></i>Salud</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box4">
-                    <a class="btn colorBotones">Educación</a>
+                    <a class="btn colorBotones"><i class="fas fa-graduation-cap"></i>Educación</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box5">
-                    <a class="btn colorBotones">Vivienda</a>
+                    <a class="btn colorBotones"><i class="fas fa-home "></i>Vivienda</a>
                 </div>
             </div>
             <div class="col s6 m4">
                 <div id="box6">
-                    <a class="btn colorBotones">Curso de español</a>
+                    <a class="btn colorBotones"><i class="fab fa-amilia"></i>Clases de español</a>
                 </div>
             </div>
         </div>
