id display none

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
       <p class="white-text"><img src="image/img-3.jpg"></p>
     </div>
   </div> -->
-  <div class="slider">
+  <div class="slider" id="slider">
       <ul class="slides">
         <li>
           <img src="image/img-1.jpg" class="imgSlider" > <!-- random image -->
