--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,36 @@
       </div>
     </div>
   </section>
+  <!-- Dropdown Structure -->
+  <ul id="dropdown1" class="dropdown-content">
+    <li><a href="#!">Regularizaciín migratoria</a></li>
+    <li class="divider"></li>
+    <li><a href="#!">Trabajo</a></li>
+    <li class="divider"></li>
+    <li><a href="#!">Salud</a></li>
+    <li><a href="#!">Educación</a></li>
+    <li class="divider"></li>
+    <li><a href="#!">Vivienda</a></li>
+    <li class="divider"></li>
+    <li><a href="#!">Cursos de español</a></li>
+  </ul>
 
+  <nav class="colorNav">
+    <div class="nav-wrapper" >
+      <a href="#!" class="left brand-logo"></a>
+      <ul class="right">
+
+        <!-- Dropdown Trigger -->
+        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons">menu</i></a></li>
+      </ul>
+    </div>
+  </nav>
   <!-- regularización -->
   <section id="regulariz">
     <div class="col s12">
-      <h4 class="center">Regulariza tu Situación</h4>
-      <p class="center">¿Como ingresaste al país?</p>
-      <p class="center">(Según tu respuesta te daremos la mejor orientación posible)</p>
+      <h4 class="center colorTexto">Regulariza tu Situación</h4>
+      <p class="center colorTexto">¿Como ingresaste al país?</p>
+      <p class="center colorTexto">(Según tu respuesta te daremos la mejor orientación posible)</p>
     </div>
     <div class="col s12 center">
       <a class="waves-effect waves-light btn-large" onclick="regular()">Regular</a>
@@ -59,8 +82,8 @@
     <div id="textoRegIrr">
 
     </div>
-    <div class="col s12 center">
-      <a class="waves-effect waves-light btn-small">Descarga tu Documento</a>
+    <div class="col s12 center" id="descarga">
+      <!-- <a class="waves-effect waves-light btn-small">Descarga tu Documento</a> -->
 
     </div>
   </section>
@@ -94,30 +117,7 @@
     </div>
   </div>
 
-  <!-- Dropdown Structure -->
-  <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">Regularizaciín migratoria</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Trabajo</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Salud</a></li>
-    <li><a href="#!">Educación</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Vivienda</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Cursos de español</a></li>
-  </ul>
 
-  <nav class="colorNav">
-    <div class="nav-wrapper" >
-      <a href="#!" class="left brand-logo"></a>
-      <ul class="right">
-
-        <!-- Dropdown Trigger -->
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons">menu</i></a></li>
-      </ul>
-    </div>
-  </nav>
 
   <!--Carousel-->
   <!-- <div class="carousel carousel-slider center" id="carrousel">
