--- a/public/index.html
+++ b/public/index.html
@@ -28,22 +28,19 @@
 
 <body>
   <!-- Login -->
-  <section class="loginPage">
-    <div class="container" id="login">
-      <div class="row">
-        <div class="col s4"></div>
-
-        <div class="col s4">
-          <img id="img-logo" src="image/logoblanco.png">
-          <form clas="black-text" action="" id="loginContent">
-            <div id="firebaseui-auth-container"></div>
-          </form>
-        </div>
-
-        <div class="col s4"></div>
-      </div>
-    </div>
-  </section>
+  <div class="container-fluid" id="login">
+    <div class="row">
+     <div class="col-sm-4"></div>
+     <div class="col-sm-4">
+       <div id="titulo">
+         <br>
+       </div>
+       <form action="" id="loginContent">
+         <div id="firebaseui-auth-container"></div>
+       </form>
+     </div>
+     <div class="col-sm-4"></div>
+   </div>
   <!-- Dropdown Structure -->
   <ul id="dropdown1" class="dropdown-content">
     <li><a href="#!">Regularizaciín migratoria</a></li>
