--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
   <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
-      <li><a href="#!">Inicio</a></li>
+      <li><a href="#!" onclick="inicio()">Inicio</a></li>
       <li><a href="#!" onclick="regularizarBtn()">Regularizaciín migratoria</a></li>
       <li class="divider"></li>
       <li><a href="#!">Trabajo</a></li>
