boton cerrar ses

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,9 @@
       <li><a href="#!">Vivienda</a></li>
       <li class="divider"></li>
       <li><a href="#!">Cursos de español</a></li>
+      <li><a id="out" style="text-align: left">
+        <u>Sign Out</u>
+      </a> </li>
     </ul>
 
     <div class="navbar-fixed">
@@ -202,7 +205,7 @@
       <div id="userLogin"></div>
       <a  class="btn" id="out" style="text-align: left">
         <u>Sign Out</u>
-      </a>
+      </a> 
        <div class="chatZone">
         <div id="messageContainer"></div>
         <div class="row">
