--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       <li class="divider"></li>
       <li><a href="#!">Cursos de español</a></li>
       <li><a id="out" style="text-align: left">
-        <u>Sign Out</u>
+        <u>Cerrar Sesión</u>
       </a> </li>
     </ul>
 
