--- a/public/index.html
+++ b/public/index.html
@@ -203,9 +203,9 @@
     <!-- Pintura del chat -->
     <div class="container-fluid" id="welcomeUser">
       <div id="userLogin"></div>
-      <a  class="btn" id="out" style="text-align: left">
+      <!-- <a  class="btn" id="out" style="text-align: left">
         <u>Sign Out</u>
-      </a> 
+      </a>  -->
        <div class="chatZone">
         <div id="messageContainer"></div>
         <div class="row">
