--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
          <h1 style="color: #E5E5E5">INMG</h1>
        </div>
        <form action="" id="loginContent">
-         <div id="firebaseui-auth-container"></div>
+         <div id="firebaseui-auth-container" onclick="iniciarSesion()"></div>
        </form>
      </div>
      <div class="col-sm-4"></div>
@@ -63,7 +63,7 @@
       </a> </li>
     </ul>
 
-    <div class="navbar-fixed">
+    <div class="navbar-fixed" id="navBar">
       <nav class="colorNav">
         <div class="nav-wrapper">
           <a href="#!" class="left brand-logo"><img id="navLogo" src="image/logoblanco.png"></a>
