--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,13 @@
      <div class="col s4"></div>
      <div class="col s4">
        <div id="titulo">
-         <h1 style="color: #E5E5E5 ">SOCIAL</h1>
-         <br>
-         <h1 style="color: #E5E5E5">INMG</h1>
+         <!-- <h1 style="color: #E5E5E5 ">SOCIAL</h1> -->
+         <!-- <br> -->
+         <!-- <h1 style="color: #E5E5E5">INMG</h1> -->
+         <img src="./image/logoblanco.png" alt="" srcset="">
+         <input type="text" name="" id="">
+         <input type="text" name="" id="">
+
        </div>
        <form action="" id="loginContent">
          <div id="firebaseui-auth-container" onclick="iniciarSesion()"></div>
@@ -207,6 +211,7 @@
         <u>Sign Out</u>
       </a>  -->
        <div class="chatZone">
+         <ul id="userOnline"></ul>
         <div id="messageContainer"></div>
         <div class="row">
           <div class="col-sm-4" id="mapContent"></div>
@@ -263,7 +268,6 @@
   <script src="./js/chatMain.js"></script>
   <script src="./js/regularizacionDescarga.js"></script>
   <script src="./js/page.js"></script>
-  <script src="./valeuno.js"></script>
   <script src="./js/botones.js"></script>
 
 
