--- a/index.html
+++ b/index.html
@@ -1,19 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assest/materialize/css/materialize.css">
-    <link rel="stylesheet" href="./assest/font-awesome/css/">
-    <title>SJM</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="./materialize/css/materialize.css">
+  <link rel="stylesheet" href="./css/valeuno.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/login.css">
+  <link rel="shortcut icon" href="image/logoblanco.png">
+  <title>Welcome Migrapp</title>
+
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/5.5.5/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/5.5.5/firebase-auth.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-database.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/5.5.5/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.4.1/firebaseui.css" />
 </head>
+
 <body>
+  <!-- Login -->
+  <div class="container" id="login">
+<div class="row">
+     <div class="col s10 offset-s4 green">
+          <img src="./image/logoblanco.png" alt="" class="responsive-img " width="30%" height="30%">
+      </div>
+<div class="col s10 offset-s4">
+          <input placeholder="Número de celular" id="first_phone" type="text" class="validate " >
+          <input placeholder="Contraseña" id="first_name" type="text" class="validate">
+</div>
+       
+       <form action="" id="loginContent">
+         <div id="firebaseui-auth-container" ></div>
+       </form>
+     </div>
+ </div>
 
 
-        
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
-    <script src="./assest/materialize/js/materialize.js"></script>
-    <script src="./src/js/index.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+  <script src="./materialize/js/materialize.js"></script>
+  <script src="./js/index.js"></script>
+  <script src="./js/chat.js"></script>
+  <script src="./js/chatMain.js"></script>
+  <script src="./js/regularizacionDescarga.js"></script>
+  <script src="./js/page.js"></script>
+  <script src="./js/botones.js"></script>
+
+
 </body>
+
 </html>
