--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
       <!-- Dropdown Structure -->
       <ul id="dropdown1" class="dropdown-content">
             <li><a href="index1.html" onclick="inicio()">Inicio</a></li>
-            <li><a href="index.html" onclick="regularizarBtn()">Regularizaciín migratoria</a></li>
+            <li><a href="index2.html" onclick="regularizarBtn()">Regularizaciín migratoria</a></li>
             <li class="divider"></li>
             <li><a href="#!">Trabajo</a></li>
             <li class="divider"></li>
