--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-  <script src="./js/index.js"></script>
+  <!-- <script src="./js/index.js"></script> -->
   <script src="./js/chat.js"></script>
   <script src="./js/chatMain.js"></script>
-  <script src="./js/regularizacionDescarga.js"></script>
-  <script src="./js/page.js"></script>
-  <script src="./js/botones.js"></script>
+  <!-- <script src="./js/regularizacionDescarga.js"></script> -->
+  <!-- <script src="./js/page.js"></script> -->
+  <!-- <script src="./js/botones.js"></script> -->
 
 
 </body>
