--- a/index.html
+++ b/index.html
@@ -46,7 +46,19 @@
 
 
 
-
+ <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+ <script>
+   // Initialize Firebase
+   var config = {
+     apiKey: "AIzaSyDAA4JbcHK1nV-K4ox0ubnaG_PxeTEpgkY",
+     authDomain: "ibmchat-e1ce2.firebaseapp.com",
+     databaseURL: "https://ibmchat-e1ce2.firebaseio.com",
+     projectId: "ibmchat-e1ce2",
+     storageBucket: "ibmchat-e1ce2.appspot.com",
+     messagingSenderId: "299553386584"
+   };
+   firebase.initializeApp(config);
+ </script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
