--- a/index4.html
+++ b/index4.html
@@ -92,7 +92,7 @@
               <div class="bckr_hdr">
                 <p class="hola">Hola, bienvenido </p>
                 <p class="where">Estamos aquí para responder tus preguntas relacionadas con Migrapp</p>
-                <img class="circle" id="chat_img" src="../public/image/chat.jpg" alt="">
+                <img class="circle" id="chat_img" src="./image/chat.jpg" alt="">
                 <p class="nombre" style="font-weight: bold;">José</p>
               </div>
               <div class="col s12">
