--- a/index.html
+++ b/index.html
@@ -28,37 +28,41 @@
 
 <body>
   <!-- Login -->
-  <div class="container" id="login">
-<div class="row">
-     <div class="col s10 offset-s4 green">
-          <img src="./image/logoblanco.png" alt="" class="responsive-img " width="30%" height="30%">
+  <section id="login">
+    <div class="row">
+      <!-- <div class="col s10 offset-s4 green">
+        <img src="./image/logoblanco.png" alt="" class="responsive-img " width="30%" height="30%">
       </div>
-<div class="col s10 offset-s4">
-          <input placeholder="Número de celular" id="first_phone" type="text" class="validate " >
-          <input placeholder="Contraseña" id="first_name" type="text" class="validate">
-</div>
-       
-       <form action="" id="loginContent">
-         <div id="firebaseui-auth-container" ></div>
-       </form>
-     </div>
- </div>
+      <div class="col s10 offset-s4">
+        <input placeholder="Número de celular" id="first_phone" type="text" class="validate ">
+        <input placeholder="Contraseña" id="first_name" type="text" class="validate">
+      </div> -->
+<div class="col s12"> 
+
+      <form action="" id="loginContent">
+        <div id="firebaseui-auth-container"></div>
+      </form>
+    </div>
+  
+    </div>
+
+  </section>
 
 
 
- <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
- <script>
-   // Initialize Firebase
-   var config = {
-     apiKey: "AIzaSyDAA4JbcHK1nV-K4ox0ubnaG_PxeTEpgkY",
-     authDomain: "ibmchat-e1ce2.firebaseapp.com",
-     databaseURL: "https://ibmchat-e1ce2.firebaseio.com",
-     projectId: "ibmchat-e1ce2",
-     storageBucket: "ibmchat-e1ce2.appspot.com",
-     messagingSenderId: "299553386584"
-   };
-   firebase.initializeApp(config);
- </script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDAA4JbcHK1nV-K4ox0ubnaG_PxeTEpgkY",
+      authDomain: "ibmchat-e1ce2.firebaseapp.com",
+      databaseURL: "https://ibmchat-e1ce2.firebaseio.com",
+      projectId: "ibmchat-e1ce2",
+      storageBucket: "ibmchat-e1ce2.appspot.com",
+      messagingSenderId: "299553386584"
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
